--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ html {
 }
 * {
   box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 body {
