--- a/src/App.css
+++ b/src/App.css
@@ -181,40 +181,14 @@ a {
   left: -8px;
   width: calc(100% + 16px);
   height: calc(100% + 16px);
-  border: 2px solid #eb7635;
+  border: 2px solid #eee;
   border-radius: 50%;
-  -webkit-animation: speak-animation 1s infinite;
-  animation: speak-animation 1s infinite;
   opacity: 0;
   pointer-events: none;
 }
 
 .speaking {
   opacity: 1 !important;
-}
-
-@-webkit-keyframes speak-animation {
-  0%,
-  100% {
-    transform: scale(1);
-    opacity: 0.5;
-  }
-  50% {
-    transform: scale(1.1);
-    opacity: 1;
-  }
-}
-
-@keyframes speak-animation {
-  0%,
-  100% {
-    transform: scale(1);
-    opacity: 0.5;
-  }
-  50% {
-    transform: scale(1.1);
-    opacity: 1;
-  }
 }
 
 /* .react-tel-input .selected-flag {
