--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,10 @@ a {
   border: 2px solid #eee;
   border-radius: 50%;
   pointer-events: none;
+  transition: border-color 0.5s ease-in-out;
+}
+.speaking-avatar.speaking::before {
+  border-color: #eb7635; /* Color when speaking */
 }
 
 /* .react-tel-input .selected-flag {
