--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,7 @@ a {
   border: 2px solid #eee;
   border-radius: 50%;
   pointer-events: none;
+  transition: border-color 0.3s ease;
 }
 
 /* .react-tel-input .selected-flag {
